--- a/analysis/skymodel_parameters_limited/no_diffuse/00_nullhypothesis.yaml
+++ b/analysis/skymodel_parameters_limited/no_diffuse/00_nullhypothesis.yaml
@@ -1,41 +1,4 @@
 components:
--   name: cygnus_diffuse
-    type: SkyModel
-    spectral:
-        type: BrokenPowerLawSpectralModel
-        parameters:
-        -   name: index1
-            value: 2.5
-        -   name: index2
-            value: 2.7
-        -   name: amplitude
-            value: 1.0e-13
-            unit: cm-2 s-1 TeV-1
-        -   name: ebreak
-            value: 10.0
-            unit: TeV
-    spatial:
-        type: GaussianSpatialModel
-        frame: galactic
-        parameters:
-        -   name: lon_0
-            value: 79.6188337
-            unit: deg
-            frozen: true
-        -   name: lat_0
-            value: 0.962326
-            unit: deg
-            frozen: true
-        -   name: sigma
-            value: 2.1
-            unit: deg
-            min: 0.1
-            max: 3.0
-        -   name: e
-            value: 0.01
-        -   name: phi
-            value: 0.0
-            unit: deg
 -   name: PSR J1958+2846
     type: SkyModel
     spectral:
@@ -136,7 +99,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: /home/tutone/Data/ASTRI/DC-GCygni/skymodel/VER_J2020+368.fits
+        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2020+368.fits
         normalize: true
         unit: 1 / sr
 -   name: VER J2018+367
@@ -163,7 +126,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: /home/tutone/Data/ASTRI/DC-GCygni/skymodel/VER_J2018+367.fits
+        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2018+367.fits
         normalize: true
         unit: 1 / sr
 -   name: VER J2016+371
@@ -190,7 +153,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: /home/tutone/Data/ASTRI/DC-GCygni/skymodel/VER_J2016+371.fits
+        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2016+371.fits
         normalize: true
         unit: 1 / sr
 -   name: LHAASO J2032+4102
@@ -478,7 +441,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: /home/tutone/Data/ASTRI/DC-GCygni/skymodel/VER_J2019+407.fits
+        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2019+407.fits
         normalize: true
         unit: 1 / sr
 -   name: 3HWC J2043+443
@@ -1535,4 +1498,4 @@ components:
         -   name: reference
             value: 1.0
             unit: TeV
-covariance: 08_bpl_gauss_center_fixed_covariance.dat
+covariance: 00_nullhypothesis_covariance.dat
