--- a/analysis/skymodel_parameters_limited/no_diffuse/02_pl_gauss_center_fixed.yaml
+++ b/analysis/skymodel_parameters_limited/no_diffuse/02_pl_gauss_center_fixed.yaml
@@ -2,17 +2,15 @@ components:
 -   name: cygnus_diffuse
     type: SkyModel
     spectral:
-        type: BrokenPowerLawSpectralModel
+        type: PowerLawSpectralModel
         parameters:
-        -   name: index1
+        -   name: index
             value: 2.5
-        -   name: index2
-            value: 2.7
         -   name: amplitude
-            value: 1.0e-13
+            value: 1.0e-11
             unit: cm-2 s-1 TeV-1
-        -   name: ebreak
-            value: 10.0
+        -   name: reference
+            value: 1.0
             unit: TeV
     spatial:
         type: GaussianSpatialModel
@@ -136,7 +134,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: /home/tutone/Data/ASTRI/DC-GCygni/skymodel/VER_J2020+368.fits
+        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2020+368.fits
         normalize: true
         unit: 1 / sr
 -   name: VER J2018+367
@@ -163,7 +161,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: /home/tutone/Data/ASTRI/DC-GCygni/skymodel/VER_J2018+367.fits
+        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2018+367.fits
         normalize: true
         unit: 1 / sr
 -   name: VER J2016+371
@@ -190,7 +188,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: /home/tutone/Data/ASTRI/DC-GCygni/skymodel/VER_J2016+371.fits
+        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2016+371.fits
         normalize: true
         unit: 1 / sr
 -   name: LHAASO J2032+4102
@@ -478,7 +476,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: /home/tutone/Data/ASTRI/DC-GCygni/skymodel/VER_J2019+407.fits
+        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2019+407.fits
         normalize: true
         unit: 1 / sr
 -   name: 3HWC J2043+443
@@ -1535,4 +1533,4 @@ components:
         -   name: reference
             value: 1.0
             unit: TeV
-covariance: 08_bpl_gauss_center_fixed_covariance.dat
+covariance: 02_pl_gauss_center_fixed_covariance.dat
