--- a/analysis/skymodel_parameters_limited/no_diffuse/04_ecpl_gauss_center_fixed.yaml
+++ b/analysis/skymodel_parameters_limited/no_diffuse/04_ecpl_gauss_center_fixed.yaml
@@ -2,18 +2,25 @@ components:
 -   name: cygnus_diffuse
     type: SkyModel
     spectral:
-        type: BrokenPowerLawSpectralModel
+        type: ExpCutoffPowerLawSpectralModel
         parameters:
-        -   name: index1
+        -   name: index
             value: 2.5
-        -   name: index2
-            value: 2.7
+            min: 2.1
+            max: 3.0
         -   name: amplitude
-            value: 1.0e-13
+            value: 3.0e-11
             unit: cm-2 s-1 TeV-1
-        -   name: ebreak
-            value: 10.0
+        -   name: reference
+            value: 1.0
             unit: TeV
+        -   name: lambda_
+            value: 0.01
+            unit: TeV-1
+            min: 0.001
+            max: 0.1
+        -   name: alpha
+            value: 1.0
     spatial:
         type: GaussianSpatialModel
         frame: galactic
@@ -136,7 +143,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: /home/tutone/Data/ASTRI/DC-GCygni/skymodel/VER_J2020+368.fits
+        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2020+368.fits
         normalize: true
         unit: 1 / sr
 -   name: VER J2018+367
@@ -163,7 +170,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: /home/tutone/Data/ASTRI/DC-GCygni/skymodel/VER_J2018+367.fits
+        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2018+367.fits
         normalize: true
         unit: 1 / sr
 -   name: VER J2016+371
@@ -190,7 +197,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: /home/tutone/Data/ASTRI/DC-GCygni/skymodel/VER_J2016+371.fits
+        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2016+371.fits
         normalize: true
         unit: 1 / sr
 -   name: LHAASO J2032+4102
@@ -478,7 +485,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: /home/tutone/Data/ASTRI/DC-GCygni/skymodel/VER_J2019+407.fits
+        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2019+407.fits
         normalize: true
         unit: 1 / sr
 -   name: 3HWC J2043+443
@@ -1535,4 +1542,4 @@ components:
         -   name: reference
             value: 1.0
             unit: TeV
-covariance: 08_bpl_gauss_center_fixed_covariance.dat
+covariance: 04_ecpl_gauss_center_fixed_covariance.dat
