--- a/analysis/skymodel_parameters_limited/no_diffuse/10_pl_gauss_center_free.yaml
+++ b/analysis/skymodel_parameters_limited/no_diffuse/10_pl_gauss_center_free.yaml
@@ -2,17 +2,15 @@ components:
 -   name: cygnus_diffuse
     type: SkyModel
     spectral:
-        type: BrokenPowerLawSpectralModel
+        type: PowerLawSpectralModel
         parameters:
-        -   name: index1
+        -   name: index
             value: 2.5
-        -   name: index2
-            value: 2.7
         -   name: amplitude
-            value: 1.0e-13
+            value: 1.0e-11
             unit: cm-2 s-1 TeV-1
-        -   name: ebreak
-            value: 10.0
+        -   name: reference
+            value: 1.0
             unit: TeV
     spatial:
         type: GaussianSpatialModel
@@ -1535,4 +1533,4 @@ components:
         -   name: reference
             value: 1.0
             unit: TeV
-covariance: 08_bpl_gauss_center_fixed_covariance.dat
+covariance: 10_pl_gauss_center_free_covariance.dat
