--- a/analysis/skymodel_parameters_limited/no_diffuse/11_ecpl_disk_center_free.yaml
+++ b/analysis/skymodel_parameters_limited/no_diffuse/11_ecpl_disk_center_free.yaml
@@ -2,20 +2,27 @@ components:
 -   name: cygnus_diffuse
     type: SkyModel
     spectral:
-        type: BrokenPowerLawSpectralModel
+        type: ExpCutoffPowerLawSpectralModel
         parameters:
-        -   name: index1
+        -   name: index
             value: 2.5
-        -   name: index2
-            value: 2.7
+            min: 2.1
+            max: 3.0
         -   name: amplitude
-            value: 1.0e-13
+            value: 3.0e-11
             unit: cm-2 s-1 TeV-1
-        -   name: ebreak
-            value: 10.0
+        -   name: reference
+            value: 1.0
             unit: TeV
+        -   name: lambda_
+            value: 0.01
+            unit: TeV-1
+            min: 0.001
+            max: 0.1
+        -   name: alpha
+            value: 1.0
     spatial:
-        type: GaussianSpatialModel
+        type: DiskSpatialModel
         frame: galactic
         parameters:
         -   name: lon_0
@@ -26,16 +33,18 @@ components:
             value: 0.962326
             unit: deg
             frozen: true
-        -   name: sigma
-            value: 2.1
+        -   name: r_0
+            value: 3.0
             unit: deg
-            min: 0.1
-            max: 3.0
+            min: 0.05
+            max: 4.0
         -   name: e
             value: 0.01
         -   name: phi
             value: 0.0
             unit: deg
+        -   name: edge_width
+            value: 0.1
 -   name: PSR J1958+2846
     type: SkyModel
     spectral:
@@ -1535,4 +1544,4 @@ components:
         -   name: reference
             value: 1.0
             unit: TeV
-covariance: 08_bpl_gauss_center_fixed_covariance.dat
+covariance: 11_ecpl_disk_center_free_covariance.dat
