--- a/analysis/skymodel_parameters_limited/no_diffuse/12_ecpl_gauss_center_free.yaml
+++ b/analysis/skymodel_parameters_limited/no_diffuse/12_ecpl_gauss_center_free.yaml
@@ -2,18 +2,25 @@ components:
 -   name: cygnus_diffuse
     type: SkyModel
     spectral:
-        type: BrokenPowerLawSpectralModel
+        type: ExpCutoffPowerLawSpectralModel
         parameters:
-        -   name: index1
+        -   name: index
             value: 2.5
-        -   name: index2
-            value: 2.7
+            min: 2.1
+            max: 3.0
         -   name: amplitude
-            value: 1.0e-13
+            value: 3.0e-11
             unit: cm-2 s-1 TeV-1
-        -   name: ebreak
-            value: 10.0
+        -   name: reference
+            value: 1.0
             unit: TeV
+        -   name: lambda_
+            value: 0.01
+            unit: TeV-1
+            min: 0.001
+            max: 0.1
+        -   name: alpha
+            value: 1.0
     spatial:
         type: GaussianSpatialModel
         frame: galactic
@@ -1535,4 +1542,4 @@ components:
         -   name: reference
             value: 1.0
             unit: TeV
-covariance: 08_bpl_gauss_center_fixed_covariance.dat
+covariance: 12_ecpl_gauss_center_free_covariance.dat
