--- a/analysis/results/single_model/strategy_1/tol_0.1/no_diffuse/all_IDs_ene_0.7_100_bin_20_binsz_0.02/models/08_bpl_gauss_center_fixed_fitted.yaml
+++ b/analysis/results/single_model/strategy_1/tol_0.1/no_diffuse/all_IDs_ene_0.7_100_bin_20_binsz_0.02/models/08_bpl_gauss_center_fixed_fitted.yaml
@@ -5,23 +5,23 @@ components:
         type: BrokenPowerLawSpectralModel
         parameters:
         -   name: index1
-            value: 2.000000953674013
-            error: 0.00014226137159181328
+            value: 2.0000000216054925
+            error: 2.1286991186132803e-05
             min: 2.0
             max: 3.0
         -   name: index2
-            value: 2.9999996223405105
-            error: 0.00016534888891018624
+            value: 2.999999141693388
+            error: 0.0002495502403846036
             min: 2.1
             max: 3.0
         -   name: amplitude
-            value: 4.836699642660567e-12
+            value: 4.672423291654734e-12
             unit: cm-2 s-1 TeV-1
-            error: 1.3596716092918027e-12
+            error: 1.3269587369835028e-12
         -   name: ebreak
-            value: 2.4606856911838677
+            value: 2.4684315236109104
             unit: TeV
-            error: 0.28334119275668607
+            error: 0.2904795369312867
     spatial:
         type: GaussianSpatialModel
         frame: galactic
@@ -35,9 +35,9 @@ components:
             unit: deg
             frozen: true
         -   name: sigma
-            value: 1.9163507977677625
+            value: 1.90349710583998
             unit: deg
-            error: 0.04448820958648735
+            error: 0.04385224103735061
             min: 0.1
             max: 3.0
         -   name: e
@@ -51,9 +51,9 @@ components:
         type: LogParabolaSpectralModel
         parameters:
         -   name: amplitude
-            value: 4.248225494212166e-15
+            value: 4.110515781186019e-15
             unit: cm-2 s-1 TeV-1
-            error: 1.2597961917640115e-15
+            error: 1.242252425982329e-15
         -   name: reference
             value: 7.0
             unit: TeV
@@ -90,9 +90,9 @@ components:
         type: LogParabolaSpectralModel
         parameters:
         -   name: amplitude
-            value: 5.588932221510036e-15
+            value: 5.5816343301323345e-15
             unit: cm-2 s-1 TeV-1
-            error: 1.3242560485424216e-15
+            error: 1.3138798315653146e-15
         -   name: reference
             value: 7.0
             unit: TeV
@@ -132,9 +132,9 @@ components:
             value: 1.5
             frozen: true
         -   name: amplitude
-            value: 2.1259228455423883e-13
+            value: 1.9567137171706202e-13
             unit: cm-2 s-1 TeV-1
-            error: 1.476428378872686e-14
+            error: 1.3280359651360985e-14
         -   name: reference
             value: 1.0
             unit: TeV
@@ -148,7 +148,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2020+368.fits
+        filename: /home/antonio/Data/ASTRI/DC-GCygni/skymodel/VER_J2020+368.fits
         normalize: true
         unit: 1 / sr
 -   name: VER J2018+367
@@ -160,9 +160,9 @@ components:
             value: 2.0
             frozen: true
         -   name: amplitude
-            value: 4.3276119526721565e-13
+            value: 3.832622440376691e-13
             unit: cm-2 s-1 TeV-1
-            error: 3.4674452506588114e-14
+            error: 3.0048496621220984e-14
         -   name: reference
             value: 1.0
             unit: TeV
@@ -176,7 +176,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2018+367.fits
+        filename: /home/antonio/Data/ASTRI/DC-GCygni/skymodel/VER_J2018+367.fits
         normalize: true
         unit: 1 / sr
 -   name: VER J2016+371
@@ -188,9 +188,9 @@ components:
             value: 2.3
             frozen: true
         -   name: amplitude
-            value: 3.3652379918890436e-13
+            value: 2.7679099286622764e-13
             unit: cm-2 s-1 TeV-1
-            error: 3.6701957777509145e-14
+            error: 2.903653688095758e-14
         -   name: reference
             value: 1.0
             unit: TeV
@@ -204,7 +204,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2016+371.fits
+        filename: /home/antonio/Data/ASTRI/DC-GCygni/skymodel/VER_J2016+371.fits
         normalize: true
         unit: 1 / sr
 -   name: LHAASO J2032+4102
@@ -216,9 +216,9 @@ components:
             value: 2.0
             frozen: true
         -   name: amplitude
-            value: 1.140595176947395e-13
+            value: 1.1545116112836414e-13
             unit: cm-2 s-1 TeV-1
-            error: 8.767806953100101e-15
+            error: 8.662271336438521e-15
         -   name: reference
             value: 2.3
             unit: TeV
@@ -255,9 +255,9 @@ components:
         type: LogParabolaSpectralModel
         parameters:
         -   name: amplitude
-            value: 6.384413751263245e-16
+            value: 6.374474194456711e-16
             unit: cm-2 s-1 TeV-1
-            error: 5.4304711502733604e-17
+            error: 5.35308650285052e-17
         -   name: reference
             value: 40.0
             unit: TeV
@@ -493,7 +493,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2019+407.fits
+        filename: /home/antonio/Data/ASTRI/DC-GCygni/skymodel/VER_J2019+407.fits
         normalize: true
         unit: 1 / sr
 -   name: 3HWC J2043+443
@@ -1536,8 +1536,8 @@ components:
         type: PowerLawNormSpectralModel
         parameters:
         -   name: norm
-            value: 0.9870341494150513
-            error: 0.0005768448366642252
+            value: 0.9870920947279869
+            error: 0.0005598367704721961
         -   name: tilt
             value: 0.0
         -   name: reference
